2012-06-26  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: now includes raw data in ve output structure.
	* plot_alphadist.m: added.  plots alpha distribution for an input tau.
	* plot_alphavstau.m: added.  plots alpha (slope of msd) as a function of tau.

2012-03-31  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: added option for calculating step-size distributions.
	* video_msd.m: now accommodates new options for msd.m 

2011-10-09  Jeremy Cribb <jcribb@email.unc.edu>
	* msdstat.m: implemented new 'baseline' variable

2011-09-09  Jeremy Cribb <jcribb@email.unc.edu>
	* msdstat.m: fixed bug in msdstat structure.

2011-09-09  Jeremy Cribb <jcribb@email.unc.edu>
	* msdstat.m:  better handling of "empty set" cases.
	* video_msd.m:  added 'window' to output msd structure.  better handling of "empty set" cases.

2011-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* getMSDslope.m:  now handles empty case for input parameters.
	* msd.m: removed 'winedge' parameter.  now keeps squared displacements "r^2" only the function is asked to output it.
	* plot_msd.m: now handles empty case for input parameters.  changed coloring and linewidth of the mean to make it easier to see amongst individual measurments.
	* msdstat.m: now handles empty case for input parameters.  added logentry capability.
	* plot_ve.m: same.
	* ve.m: same.
	* video_msd.m: same.  also handles squared displacments only when asked.	

2011-07-20  Jeremy Cribb <jcribb@email.unc.edu>
	* video_msd.m:  uses numeric input (in place of file names) regardless of input units and ignores the conversion with calib_um. 
	* ve.m: removed old commented code.  removed a parameter that is no longer needed.

2011-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* video_msd.m:  assumes numeric input (in place of file names) has units of pixels (the same as if the file were loaded) and uses the calib_um accordingly.

2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>