@@ -1,3 +1,8 @@
+2012-12-10  Jeremy Cribb <jcribb@email.unc.edu>
+	* msd.m: No longer a fatal error to input no data.  Now an error message is sent to display/logfile and an empty dataset is outputted instead.
+	* msdstat.m: same.
+	* ve.m: same.
+
 2012-06-26  Jeremy Cribb <jcribb@email.unc.edu>
 	* ve.m: now includes raw data in ve output structure.
 	* plot_alphadist.m: added.  plots alpha distribution for an input tau.
